# matrix256-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: conformance.yml  lint.yml  release.yml
matrix256/: __init__.py  v1.py
tests/: generate_fixtures.py
