[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matrix256"
version = "1.0.3"
description = "Python reference implementation of matrix256v1 — a SHA-256 fingerprint over the (path, size) records of a rooted filesystem tree."
readme = "README.md"
authors = [
    { name = "wolfy" },
]
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["sha256", "fingerprint", "filesystem", "hash", "matrix256"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Filesystems",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/shitwolfymakes/matrix256-py"
Repository = "https://github.com/shitwolfymakes/matrix256-py"
Issues = "https://github.com/shitwolfymakes/matrix256-py/issues"
Specification = "https://github.com/shitwolfymakes/matrix256"

[dependency-groups]
dev = ["ruff>=0.6"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "B",       # flake8-bugbear
    "S101",    # use of assert
    "T20",     # flake8-print
    "BLE",     # flake8-blind-except
    "TID251",  # banned-api (sys.exit)
    "D100",    # missing module docstring
    "D101",    # missing class docstring
    "D102",    # missing method docstring
    "D103",    # missing function docstring
    "D104",    # missing package docstring
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "T20", "D", "BLE", "TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"sys.exit".msg = "Library code must not call sys.exit; raise an exception instead."
